--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@ android:orientation="vertical"
 android:padding="18dp">
 
     <LinearLayout
-        android:layout_width="391dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp">
 
@@ -27,7 +27,7 @@ android:padding="18dp">
             android:id="@+id/idNomEtudiant"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:hint="Nom Etudiant"
             android:textColor="@color/black"
